# Rynux

./: .gitignore  .ignore  AGENTS.md  Kbuild  Kconfig  LICENSE  Makefile  Makefile.bak  README.md  rust-toolchain.toml
.github/workflows/: build-test.yml
Documentation/: developer-guide.md  quick-start.md
arch/: Kconfig
arch/arm64/: Kbuild  Kconfig  Makefile
drivers/: Kconfig  Makefile
drivers/amba/: Kconfig
drivers/tty/: Kconfig  Makefile
init/: Kbuild  Kconfig  lib.rs  start.rs
kernel/: Kconfig  Makefile  compiler.rs  error.rs  global_sym.rs  lib.rs  linkage.rs  prelude.rs  size.rs  types.rs  vmrynux.rs
kernel/alloc/: allocator.rs  allocator_test.rs  kbox.rs  memblock_allocator.rs  mod.rs
kernel/arch/: cache.rs  cpu.rs  irq.rs  mm.rs  mod.rs  ptrace.rs  setup.rs  symbols.rs  thread.rs  valayout.rs  vmrynux.rs
kernel/cpu/: cpu_mask.rs  cpu_state.rs  mod.rs  processor.rs
kernel/drivers/: mod.rs
kernel/init/: command_line.rs  init_task.rs  mod.rs
kernel/klib/: bits.rs  cfg_if.rs  math.rs  mod.rs  (+1 more)
klib/: Kconfig.debug  lib.rs  string.rs
linker/: discard.rs  lib.rs  size.rs
macros/: lib.rs
proc_macros/: Kbuild
proc_macros/const_format_proc_macros/: Cargo.toml
scripts/: Makefile  Makefile.build  Makefile.clang  Makefile.clean  Makefile.dtbs  Makefile.host  Makefile.lib  Makefile.vmlinux_o  Makefile.vmrynux  Makefile.vmrynux_o  gen-randstruct-seed.sh  generate_layout_header.py  generate_rust_analyzer.py  kallsysms.rs  link-vmlinux.sh  link-vmrynux.sh  min-tool-version.sh  rust_is_available.sh
third_lib/: Kbuild  compiler_builtins.rs
(+180 files in other folders)
