proc-macro = true

[features]
default = []
derive = ["syn", "syn/derive", "syn/printing"]
debug = ["syn/extra-traits"]
all = ["derive"]

[dependencies]
quote = "1.0.7"
proc-macro2 = "1.0.19"
unicode-xid = "0.2"

[dependencies.syn]
version = "1.0.38"
optional = true
default-features = false
features = ["parsing", "proc-macro"]

[dev-dependencies]
fastrand = "1.3.4"


[package.metadata.docs.rs]
rustc-args = ["--cfg", "feature = \"all\""]
